# kafka-practice

./: .gitignore  README.md  pyproject.toml
apps/demo/: common.py  consumer.py  producer.py
apps/producers/: producer_demo.py
