[tool.poetry]
name = "kafka-practice"
version = "0.1.0"
description = ""
authors = ["DaEun Kim <devdaeun@gmail.com>"]
readme = "README.md"
packages = [{include = "kafka_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
